# BrickBuilderMCP

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml
examples/: castle.mpd  cathedral_facade.mpd  gothic_tower.mpd  room_16x12.mpd  tiny_house.mpd
src/lego_mcp/: __init__.py  __main__.py  agent.py  assembly_ports.py  build_steps.py  cli_render.py  connection_graph.py  connections.py  connectors.py  helpers.py  mount_index.py  parts.py  prompts.py  render.py  server.py
tests/: test_architecture_helpers.py  test_assembly_ports.py  test_build_steps.py  test_buildability.py  test_builder_mode.py  test_connection_model.py  test_connections.py  test_debug_tools.py  test_helpers.py  test_ldraw.py  test_mcp_stdio.py  test_model.py  test_projects_notes.py  test_render.py  test_search.py  test_subassembly.py  test_validate.py  test_wall_bonding.py
