[project]
name = "lego-mcp"
version = "0.1.0"
description = "An MCP server that lets LLMs design real LEGO models. Semantic tools, LDraw export, no GUI automation."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "John KNIPPER", email = "code@jkn.me" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# `agent` is for the standalone Claude-driven build script (lego_mcp/agent.py).
# Not required to run the MCP server itself.
agent = ["anthropic>=0.40.0"]

[project.scripts]
lego-mcp = "lego_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
